--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@
 # platform: win-64
 asgiref=3.3.1=pyhd3eb1b0_0
 astroid=2.4.2=py38_0
-ca-certificates=2020.10.14=0
-certifi=2020.11.8=py38haa95532_0
+ca-certificates=2020.11.8=h5b45459_0
+certifi=2020.11.8=py38haa244fe_0
 chardet=3.0.4=pypi_0
 colorama=0.4.4=py_0
 django=3.1.3=pyhd3eb1b0_0
+djangorestframework=3.12.1=py_0
 freetype=2.10.4=hd328e21_0
 idna=2.10=pypi_0
 isort=5.6.4=py_0
@@ -26,6 +27,7 @@ pip=20.2.4=py38haa95532_0
 psycopg2=2.8.5=py38h7a1dbc1_0
 pylint=2.6.0=py38_0
 python=3.8.5=h5fd99cc_1
+python_abi=3.8=1_cp38
 pytz=2020.1=py_0
 requests=2.25.0=pypi_0
 setuptools=50.3.1=py38haa95532_1
